Add Railway deployment configuration
- Updated .env.example with Google Gemini API variables
- Added railway.json with build and deploy configuration
- Added Procfile for web process
- Created RAILWAY_DEPLOY.md with comprehensive deployment guide
- Created ENV_VARIABLES.md with environment variable documentation
- All environment variables properly exposed for Railway:
  - GOOGLE_API_KEY (required)
  - TEXT_MODEL (gemini-2.0-flash-exp)
  - IMAGE_MODEL (gemini-2.5-flash-image)
  - TIMEOUT_SECS (60)
  - PORT (8000, auto-set by Railway)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-OPENROUTER_API_KEY=sk-or-...
-OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-TEXT_MODEL=openai/gpt-3.5-turbo
-IMAGE_MODEL=openai/dall-e-3
+# Google Gemini API Configuration
+# Get your API key from: https://aistudio.google.com/app/apikey
+GOOGLE_API_KEY=your_google_api_key_here
+
+# Gemini Model Configuration
+TEXT_MODEL=gemini-2.0-flash-exp
+IMAGE_MODEL=gemini-2.5-flash-image
+
+# API Timeout (seconds)
 TIMEOUT_SECS=60
+
+# Optional: Port for local development (Railway will override this)
+PORT=8000
